# dutybeat-python

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/dutybeat/: __init__.py  client.py  errors.py  models.py
tests/: test_absence_types.py  test_absences.py  test_absences_write.py  test_attendance.py  test_attendance_summary.py  test_attendance_write.py  test_departments.py  test_expenses.py  test_holidays.py  test_me.py  test_users.py  test_users_create.py  test_users_deactivate.py  test_users_list.py  test_users_update.py  test_work_centers.py
